# hivemind-agents

./: .gitignore  LICENSE  README.md  pyproject.toml
hivemind/: config.py
hivemind/daemons/: __init__.py  browser.py  researcher.py  web.py
hivemind/minds/aranea/: agent.py
hivemind/minds/athena/: .gitignore  __init__.py  config.py  main.py  utilities.py
hivemind/minds/function_coder/: main.py
hivemind/minds/hephaestus/: forge.py
hivemind/oracles/: chatpdf.py  qna.py
hivemind/toolkit/: autogen.py  autogen_support.py  basic_executor.py  browserpilot_support.py  convert_to_powerpoint.py  embedchain_support.py  extract_function_info.py  id_generation.py  models.py  research.py  resource_query.py  resource_retrieval.py  semantic_component_optimizer.py  semantic_filtering.py  text_extraction.py  text_formatting.py  timestamp.py  types.py  webpage_inspector.py  yaml_tools.py
hivemind/toolkit/semantic_component_optimizer/: interface.py
hivemind/toolkit/semantic_component_optimizer/examples/: tricky_math_problem.py
